src/components/Topbar/styles.styl
@require 'tools/mixins'
@require 'settings/breakpoints'

.Topbar
    h2
        font-size 1.5rem
        margin 0 auto 2rem

+small-screen()
    .Topbar
        display     flex
        align-items center
        overflow hidden

        h2
            // ellipsis
            text-overflow  ellipsis
            overflow       hidden
            white-space    nowrap
            font-size 1.3125rem
            line-height 1
            margin    0
            overflow hidden

